--- a/nombreUsuario.css
+++ b/nombreUsuario.css
@@ -28,6 +28,7 @@ form{
     width: 180px;
     height: 60px;
     border: none;
+    background-color: black;
     background-image: url("./fondo/botonEnvio1.png");
     background-size: cover;
     background-position: center;
